bug squashing

--- a/app/static/src/sass/_forms.scss
+++ b/app/static/src/sass/_forms.scss
@@ -5,7 +5,10 @@ form {
   width: 90%;
 
   .errors {
-    padding-top: 1.5rem;
+    position: absolute;
+    bottom: -1.5rem;
+    transform: translateY(100%);
+    width: 100%;
 
     li {
       background-color: $red;
@@ -27,6 +30,7 @@ input:not([type="submit"]) {
   display: block;
   font-family: $sans;
   font-size: 1rem;
+  letter-spacing: 4px;
   line-height: 1.5rem;
   outline: none;
   padding: 1rem;
@@ -37,6 +41,7 @@ input:not([type="submit"]) {
     color: $gray;
     font-family: $sans;
     font-size: 1rem;
+    letter-spacing: 0;
     line-height: 1.5rem;
     vertical-align: top;
   };
@@ -44,7 +49,7 @@ input:not([type="submit"]) {
 
 [type="submit"] {
   background-color: rgba(0, 0, 0, 0);
-  background-image: url('../../img/icon-arrow.svg');
+  background-image: url('../img/icon-arrow.svg');
   background-position: 1rem;
   background-repeat: no-repeat;
   background-size: 2rem 2rem;
@@ -107,7 +112,7 @@ input:valid + [type="submit"] + svg g {
   transform: translate(-50%, -50%);
 
   input:not([type="submit"]) {
-    background-image: url('../../img/icon-lock.svg');
+    background-image: url('../img/icon-lock.svg');
     background-position: 2.5rem 2.125rem;
     background-repeat: no-repeat;
     background-size: 2rem 2rem;
@@ -159,6 +164,14 @@ input:valid + [type="submit"] + svg g {
     right: 0.75rem;
     top: 0.75rem;
     width: 2.75rem;
+
+    + svg {
+      height: 1.25rem;
+      padding: 1rem;
+      right: 0.65rem;
+      top: 0.65rem;
+      width: 1.25rem;
+    }
   }
 
   form {
